it-tools/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: it-tools-deployment
  labels:
    app: it-tools
  namespace: tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: it-tools
  template:
    metadata:
      name: it-tools-pod
      labels:
        app: it-tools
    spec:
      containers:
        - name: it-tools-container
          image: corentinth/it-tools
          resources:
            limits:
              cpu: 100m
              memory: 256Mi
