it-tools/service.yml
apiVersion: v1
kind: Service
metadata:
  name: it-tools-service
  labels:
    app: it-tools
  namespace: tools
spec:
  selector:
    app: it-tools
  type: ClusterIP
  ports:
    - targetPort: 80
      port: 80
