it-tools/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: it-tools-ingress
  namespace: tools
spec:
  rules:
    - host: it-tools.yorch.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: it-tools-service
                port:
                  number: 80
  tls:
    - hosts:
        - it-tools.yorch.cloud
      secretName: it-tools-certificate
